task HIESP-849: Fixed Tables for dark mode

--- a/components/table-fixed/fixed-header.css
+++ b/components/table-fixed/fixed-header.css
@@ -2,5 +2,6 @@
 	width: 100%;
 	height: 288px;
 	overflow-y: auto;
-	border: 1px solid #ccc;
+	border: 1px solid #555555;
+	background: #222222;
 }
